--- a/config.org
+++ b/config.org
@@ -20,7 +20,7 @@
   (run-with-timer 0.1 nil #'invert-face 'mode-line))
 
 ;; ----- Fonts
-(add-to-list 'default-frame-alist '(font . "Hack Nerd Font 16"))
+(add-to-list 'default-frame-alist '(font . "Hack Nerd Font 22"))
 
 ;; ----- Use Package 
 (require 'package)
@@ -139,10 +139,10 @@
 (setq inhibit-startup-screen t)
 
 ;; Dracula
-(use-package dracula-theme
+(use-package gruvbox-theme
   :ensure t
   :config
-  (load-theme 'dracula t))
+  (load-theme 'gruvbox t))
 
 ;; hiding toolbar
 (tool-bar-mode -1)
@@ -382,12 +382,13 @@
 
 ;; src blocks
 (require 'color)
-(set-face-attribute
- 'org-block nil
- :foreground nil
- :background
- (color-darken-name
-  (face-attribute 'default :background) 10))
+;; (with-eval-after-load 'org-faces
+;;   (set-face-attribute
+;;    'org-block nil
+;;    :foreground nil
+;;    :background
+;;    (color-darken-name
+;;     (face-attribute 'default :background) 10)))
 
 ;; better indentation
 (add-hook 'org-mode-hook
@@ -659,7 +660,7 @@ If given a SOURCE, execute the CMD on it."
 ;; {}
 (sp-pair "{" "}" :wrap "C-{")
 ;; []
-(sp-pair "[" "]" :wrap "M-[")
+(sp-pair "[" "]" :wrap "M-]")
 
 ;; ----- V Term
 (general-define-key
